--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "impacket>=0.10.0",
     "rich>=13.0.0",
     "charset-normalizer>=3.3.2",
-    "pefile>=2023.2.7"
+    "pefile>=2023.2.7",
+    "loguru>=0.7.0"
 ]
 
 [project.urls]
